[gd_scene load_steps=4 format=3 uid="uid://don2q7sd5dfdg"]

[ext_resource type="Script" uid="uid://b02vcargaaxrw" path="res://scenes/ui/menus/menu_top_bar.gd" id="1_g6vg3"]

[sub_resource type="Texture2D" id="Texture2D_gm0gc"]
resource_local_to_scene = false
resource_name = ""

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sdmgn"]
texture = SubResource("Texture2D_gm0gc")

[node name="MenuTopBar" type="CanvasLayer" node_paths=PackedStringArray("menu_bar_panel", "file_panel", "action_panel", "options_panel", "file_button")]
process_mode = 3
layer = 5
script = ExtResource("1_g6vg3")
menu_bar_panel = NodePath("Control/Panel")
file_panel = NodePath("Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel")
action_panel = NodePath("Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel")
options_panel = NodePath("Control/Panel/MarginContainer/HBoxContainer/OptionsButton/Panel")
file_button = NodePath("Control/Panel/MarginContainer/HBoxContainer/FileButton")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 14.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="Control"]
self_modulate = Color(1, 1, 1, 0.293)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 22.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sdmgn")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="FileButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "File"
flat = true

[node name="Panel" type="Panel" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton"]
layout_mode = 0
offset_left = -2.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 98.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SaveButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Save"
flat = true
alignment = 0

[node name="RestoreButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Restore"
flat = true
alignment = 0

[node name="RestartButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Restart"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Quit"
flat = true
alignment = 0

[node name="ActionButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "Action"
flat = true

[node name="Panel" type="Panel" parent="Control/Panel/MarginContainer/HBoxContainer/ActionButton"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 98.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ViewObjectButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "View Object"
flat = true
alignment = 0

[node name="InventoryButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Inventory"
flat = true
alignment = 0

[node name="OptionsButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "Options"
flat = true

[node name="Panel" type="Panel" parent="Control/Panel/MarginContainer/HBoxContainer/OptionsButton"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 98.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/MarginContainer/HBoxContainer/OptionsButton/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/OptionsButton/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SoundButton" type="Button" parent="Control/Panel/MarginContainer/HBoxContainer/OptionsButton/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Sound"
flat = true
alignment = 0

[connection signal="focus_entered" from="Control/Panel/MarginContainer/HBoxContainer/FileButton" to="." method="_on_file_button_focus_entered"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer/RestoreButton" to="." method="_on_restore_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/FileButton/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="focus_entered" from="Control/Panel/MarginContainer/HBoxContainer/ActionButton" to="." method="_on_action_button_focus_entered"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/ActionButton/Panel/MarginContainer/VBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="focus_entered" from="Control/Panel/MarginContainer/HBoxContainer/OptionsButton" to="." method="_on_options_button_focus_entered"]
[connection signal="pressed" from="Control/Panel/MarginContainer/HBoxContainer/OptionsButton/Panel/MarginContainer/VBoxContainer/SoundButton" to="." method="_on_sound_button_pressed"]
